<resources>
	
	<string name="cn" translatable="false">简体中文</string>
	<string name="hk" translatable="false">繁体中文</string>
	<string name="en" translatable="false">English</string>
	<string name="de" translatable="false">Deutsch</string>
	<string name="fr" translatable="false">Le français</string>
	<string name="it" translatable="false">lingua italiana</string>
	<string name="jp" translatable="false">日本語</string>
	<string name="kr" translatable="false">한국어</string>
	
	<string name="app_name">Dubhe Weather</string>
	<string name="fl">Somatosensory temperature</string>
	<string name="hum">Relative humidity</string>
	<string name="pcpn">Precipitation</string>
	<string name="vis">Visibility</string>
	<string name="group">Query scope </string>
	<string name="zh">China </string>
	<string name="overseas">Overseas</string>
	<string name="world">The World</string>
	<string name="lang">Language</string>
	<string name="setting">Settings </string>
	<string name="unit">Temperature unit</string>
	<string name="i">Inch / Fahrenheit </string>
	<string name="m">Metric / Celsius </string>
	<string name="select_lang">Select language </string>
	<string name="select_group">Select the scope of the query</string>
	<string name="select_unit">Select temperature unit </string>
	<string name="search_hint">Enter city name to search</string>
	<string name="hot_city">Hot City</string>
	<string name="choose_city">Select City</string>
	<string name="comf">Comfort</string>
	<string name="cw">Car Wash Suggest</string>
	<string name="drsg">Dressing Suggest</string>
	<string name="flu">Cold Possibility</string>
	<string name="sport">Sport</string>
	<string name="trav">Travel advice</string>
	<string name="uv">UV intensity</string>
	<string name="air">Air Pollution Diffusion Conditions</string>
	<string name="lifestyle">Life Style</string>
	<string name="nolifestyle">Sorry, the life style cannot be predicted.</string>
	<string name="nowlocation">Current Position</string>
	<string name="exit_warning">Touch the back button again to exit</string>
	<string name="select_date_text_style">Select date display style</string>
	<string name="about">About</string>
	<string name="datetextstyle">Date text style</string>
	<string name="today">Today</string>
	<string name="tomorrow">Tomorrow</string>
	<string name="the_day_after_tomorrow">Two days later</string>
	<string name="date_text_style_today">Today&amp;Tomorrow</string>
	<string name="date_text_style_week">Week name</string>
	<string name="date_text_style_date">Date</string>
	<string name="xqt">Sunday</string>
	<string name="xqy">Monday</string>
	<string name="xqe">Tuesday</string>
	<string name="xqsan">Wednesday</string>
	<string name="xqsi">Thursday</string>
	<string name="xqw">Friday</string>
	<string name="xql">Saturday</string>
</resources>