<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/constraint_setting"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/gray_back"
	>
	
	<!--Toolbar-->
	<android.support.constraint.ConstraintLayout
		android:id="@+id/constraint_setting_toolbar"
		android:layout_width="match_parent"
		android:layout_height="@dimen/toolbar_high"
		android:background="@color/colorPrimary"
		>
		
		<TextView
			android:id="@+id/btn_back_setting"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginTop="8dp"
			android:layout_marginBottom="8dp"
			android:background="@drawable/btn_back"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />
		
		<TextView
			android:id="@+id/text_setting"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginEnd="8dp"
			android:text="@string/setting"
			android:textSize="@dimen/title_size"
			android:textColor="@color/white"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />
	
	</android.support.constraint.ConstraintLayout>
	
	<!--查询范围-->
	<android.support.constraint.ConstraintLayout
		android:id="@+id/constraint_setting_group"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:background="@color/white"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/constraint_setting_toolbar">
		
		<TextView
			android:id="@+id/text_setting_group_icon"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginTop="16dp"
			android:layout_marginBottom="16dp"
			android:background="@drawable/btn_area"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />
		
		<TextView
			android:id="@+id/text_setting_group_tag"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:layout_marginBottom="8dp"
			android:text="@string/group"
			android:textSize="@dimen/tag_large_size"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toEndOf="@+id/text_setting_group_icon"
			app:layout_constraintTop_toTopOf="parent" />
		
		<TextView
			android:id="@+id/text_setting_group"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="16dp"
			android:text="中国"
			android:textSize="@dimen/tag_size"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toStartOf="@+id/text_setting_group_arrow"
			app:layout_constraintTop_toTopOf="parent" />
		
		<TextView
			android:id="@+id/text_setting_group_arrow"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="16dp"
			android:layout_marginBottom="8dp"
			android:background="@drawable/arrow_right"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent" />
	
	</android.support.constraint.ConstraintLayout>
	
	<View
		android:id="@+id/line1s"
		android:layout_width="match_parent"
		android:layout_height="@dimen/line_width"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		android:background="@color/gray_line"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/constraint_setting_group" />
	
	<!--语言-->
	<android.support.constraint.ConstraintLayout
		android:id="@+id/constraint_setting_lang"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="0dp"
		android:background="@color/white"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/line1s">
		
		<TextView
			android:id="@+id/text_setting_lang_icon"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginTop="16dp"
			android:layout_marginBottom="16dp"
			android:background="@drawable/icon_lang"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />
		
		<TextView
			android:id="@+id/text_setting_lang_tag"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:layout_marginBottom="8dp"
			android:text="@string/lang"
			android:textSize="@dimen/tag_large_size"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toEndOf="@+id/text_setting_lang_icon"
			app:layout_constraintTop_toTopOf="parent" />
		
		<TextView
			android:id="@+id/text_setting_lang"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="16dp"
			android:text="简体中文"
			android:textSize="@dimen/tag_size"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toStartOf="@+id/text_setting_lang_arrow"
			app:layout_constraintTop_toTopOf="parent" />
		
		<TextView
			android:id="@+id/text_setting_lang_arrow"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="16dp"
			android:layout_marginBottom="8dp"
			android:background="@drawable/arrow_right"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent" />
	
	</android.support.constraint.ConstraintLayout>
	
	<View
		android:id="@+id/line2s"
		android:layout_width="match_parent"
		android:layout_height="@dimen/line_width"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		android:background="@color/gray_line"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/constraint_setting_lang" />
	
	<!--单位-->
	<android.support.constraint.ConstraintLayout
		android:id="@+id/constraint_setting_unit"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="0dp"
		android:background="@color/white"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/line2s">
		
		<TextView
			android:id="@+id/text_setting_unit_icon"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginTop="16dp"
			android:layout_marginBottom="16dp"
			android:background="@drawable/icon_unit"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />
		
		<TextView
			android:id="@+id/text_setting_unit_tag"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:layout_marginBottom="8dp"
			android:text="@string/unit"
			android:textSize="@dimen/tag_large_size"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toEndOf="@+id/text_setting_unit_icon"
			app:layout_constraintTop_toTopOf="parent" />
		
		<TextView
			android:id="@+id/text_setting_unit"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="16dp"
			android:text="@string/unit_m"
			android:textSize="@dimen/tag_size"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toStartOf="@+id/text_setting_unit_arrow"
			app:layout_constraintTop_toTopOf="parent" />
		
		<TextView
			android:id="@+id/text_setting_unit_arrow"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="16dp"
			android:layout_marginBottom="8dp"
			android:background="@drawable/arrow_right"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent" />
	
	</android.support.constraint.ConstraintLayout>
	
</android.support.constraint.ConstraintLayout>
