<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/constraint_weather"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	
	<!--Toolbar-->
	<android.support.constraint.ConstraintLayout
		android:id="@+id/constraint_weather_toolbar"
		android:layout_width="match_parent"
		android:layout_height="@dimen/toolbar_high"
		android:background="@color/colorPrimary">
		
		<TextView
			android:id="@+id/btn_choosecity"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginTop="8dp"
			android:layout_marginBottom="8dp"
			android:background="@drawable/btn_city"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />
		
		<TextView
			android:id="@+id/text_citytmp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:text="当前温度"
			android:textColor="@color/white"
			android:textSize="@dimen/title_size"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toStartOf="@+id/text_cityname"
			app:layout_constraintTop_toTopOf="parent" />
		
		<TextView
			android:id="@+id/text_cityname"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginEnd="8dp"
			android:text="城市名称"
			android:textColor="@color/white"
			android:textSize="@dimen/title_size"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />
		
		<TextView
			android:id="@+id/text_titleimg"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:background="@drawable/weatherimg_999"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toEndOf="@+id/text_cityname"
			app:layout_constraintTop_toTopOf="parent" />
		
		<TextView
			android:id="@+id/btn_setting"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="16dp"
			android:layout_marginBottom="8dp"
			android:background="@drawable/btn_setting"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="parent" />
	
	</android.support.constraint.ConstraintLayout>
	
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_margin="0dp"
		android:orientation="vertical"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/constraint_weather_toolbar">
		
		<android.support.constraint.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<!--基本信息-->
			<android.support.constraint.ConstraintLayout
				android:id="@+id/constraint_tmp_weather"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@color/gray">
				
				<TextView
					android:id="@+id/text_tmp_weather"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="72dp"
					android:gravity="center"
					android:text="温度"
					android:textColor="@color/white"
					android:textSize="@dimen/tmp_size"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />
				
				<TextView
					android:id="@+id/text_condimg"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="8dp"
					android:background="@drawable/weatherimg_999"
					app:layout_constraintBottom_toBottomOf="@+id/text_condtxt_weather"
					app:layout_constraintStart_toEndOf="@+id/text_condtxt_weather"
					app:layout_constraintTop_toTopOf="@+id/text_condtxt_weather" />
				
				<TextView
					android:id="@+id/text_condtxt_weather"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="8dp"
					android:gravity="center"
					android:text="描述"
					android:textColor="@color/white"
					android:textSize="@dimen/condtxt_size"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/text_tmp_weather" />
				
				<!--风向风力-->
				<android.support.constraint.ConstraintLayout
					android:id="@+id/constraint_winddir"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginStart="16dp"
					android:layout_marginTop="16dp"
					android:layout_marginEnd="16dp"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/text_condtxt_weather">
					
					<TextView
						android:id="@+id/text_winddir"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="8dp"
						android:layout_marginTop="16dp"
						android:layout_marginBottom="8dp"
						android:text="风向"
						android:textColor="@color/white"
						android:textSize="@dimen/tag_size"
						app:layout_constraintBottom_toTopOf="@+id/text_windsc"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toTopOf="parent" />
					
					<TextView
						android:id="@+id/text_windsc"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="8dp"
						android:layout_marginBottom="16dp"
						android:text="风力"
						android:textColor="@color/white"
						android:textSize="@dimen/tag_size"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintStart_toStartOf="@+id/text_winddir"
						app:layout_constraintTop_toBottomOf="@+id/text_winddir" />
				
				
				</android.support.constraint.ConstraintLayout>
				
				<!--体感温度-->
				<android.support.constraint.ConstraintLayout
					android:id="@+id/constraint_fl"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginStart="16dp"
					android:layout_marginEnd="16dp"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintHorizontal_bias="0.0"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/constraint_winddir">
					
					<TextView
						android:id="@+id/text_fl_tag"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="16dp"
						android:layout_marginEnd="8dp"
						android:layout_marginBottom="8dp"
						android:text="@string/fl"
						android:textColor="@color/white"
						android:textSize="@dimen/tag_size"
						app:layout_constraintBottom_toTopOf="@+id/text_fl"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintTop_toTopOf="parent" />
					
					<TextView
						android:id="@+id/text_fl"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="8dp"
						android:layout_marginBottom="16dp"
						android:text="体感温度值"
						android:textColor="@color/white"
						android:textSize="@dimen/tag_size"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintEnd_toEndOf="@+id/text_fl_tag"
						app:layout_constraintTop_toBottomOf="@+id/text_fl_tag" />
				
				</android.support.constraint.ConstraintLayout>
				
				<!--相对湿度-->
				<android.support.constraint.ConstraintLayout
					android:id="@+id/constraint_hum"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginStart="16dp"
					android:layout_marginEnd="16dp"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/constraint_fl">
					
					<TextView
						android:id="@+id/text_hum_tag"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="8dp"
						android:layout_marginTop="16dp"
						android:layout_marginBottom="8dp"
						android:text="@string/hum"
						android:textColor="@color/white"
						android:textSize="@dimen/tag_size"
						app:layout_constraintBottom_toTopOf="@+id/text_hum"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toTopOf="parent" />
					
					<TextView
						android:id="@+id/text_hum"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="8dp"
						android:layout_marginBottom="16dp"
						android:text="相对湿度值"
						android:textColor="@color/white"
						android:textSize="@dimen/tag_size"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintStart_toStartOf="@+id/text_hum_tag"
						app:layout_constraintTop_toBottomOf="@+id/text_hum_tag" />
				
				</android.support.constraint.ConstraintLayout>
				
				<!--降水量-->
				<android.support.constraint.ConstraintLayout
					android:id="@+id/constraint_pcpn"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginStart="16dp"
					android:layout_marginEnd="16dp"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/constraint_hum">
					
					<TextView
						android:id="@+id/text_pcpn_tag"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="16dp"
						android:layout_marginEnd="8dp"
						android:layout_marginBottom="8dp"
						android:text="@string/pcpn"
						android:textColor="@color/white"
						android:textSize="@dimen/tag_size"
						app:layout_constraintBottom_toTopOf="@+id/text_pcpn"
						app:layout_constraintEnd_toEndOf="parent"
						app:layout_constraintTop_toTopOf="parent" />
					
					<TextView
						android:id="@+id/text_pcpn"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="8dp"
						android:layout_marginBottom="16dp"
						android:text="降水量值"
						android:textColor="@color/white"
						android:textSize="@dimen/tag_size"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintEnd_toEndOf="@+id/text_pcpn_tag"
						app:layout_constraintTop_toBottomOf="@+id/text_pcpn_tag" />
				</android.support.constraint.ConstraintLayout>
				
				<!--能见度-->
				<android.support.constraint.ConstraintLayout
					android:id="@+id/constraint_vis"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginStart="16dp"
					android:layout_marginEnd="16dp"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/constraint_pcpn">
					
					<TextView
						android:id="@+id/text_vis_tag"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="8dp"
						android:layout_marginTop="16dp"
						android:layout_marginBottom="8dp"
						android:text="@string/vis"
						android:textColor="@color/white"
						android:textSize="@dimen/tag_size"
						app:layout_constraintBottom_toTopOf="@+id/text_vis"
						app:layout_constraintStart_toStartOf="parent"
						app:layout_constraintTop_toTopOf="parent" />
					
					<TextView
						android:id="@+id/text_vis"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="8dp"
						android:layout_marginBottom="16dp"
						android:text="能见度"
						android:textColor="@color/white"
						android:textSize="@dimen/tag_size"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintStart_toStartOf="@+id/text_vis_tag"
						app:layout_constraintTop_toBottomOf="@+id/text_vis_tag" />
				</android.support.constraint.ConstraintLayout>
			
			</android.support.constraint.ConstraintLayout>
			
			<!--生活指数-->
			<android.support.constraint.ConstraintLayout
				android:id="@+id/constraint_lifestyle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
			
			
			</android.support.constraint.ConstraintLayout>
		</android.support.constraint.ConstraintLayout>
	</ScrollView>

</android.support.constraint.ConstraintLayout>
